--- a/Tamagotchi/bin/.gitignore
+++ b/Tamagotchi/bin/.gitignore
@@ -1,6 +1,6 @@
 /beduerfniss_klassen/
-/nahrungs_klassen/
-/tamagotchi_klassen.class
-/tamagotchi_klassen/
 /game/
 /gui_klassen/
+/nahrungs_klassen/
+/tamagotchi_klassen/
+/Listener/
