--- a/Tamagotchi/bin/.gitignore
+++ b/Tamagotchi/bin/.gitignore
@@ -1,6 +1,8 @@
+/Listener/
 /beduerfniss_klassen/
 /game/
 /gui_klassen/
 /nahrungs_klassen/
 /tamagotchi_klassen/
-/Listener/
+/timerTaks_Klassen/
+/timerTaks_klassen/
