Schlafen und Spielen hinzugefügt
Die Bedürfnisse "Schlafen" und "Spielen" wurde komplett programmiert und
auch der Game Over Funktion des Tamagotchis hinzugefügt.

--- a/Tamagotchi/bin/.gitignore
+++ b/Tamagotchi/bin/.gitignore
@@ -1,6 +1,9 @@
-/tamagotchi_klassen/
-/nahrungs_klassen/
-/gui_klassen/
-/listener/
-/timerTask_klassen/
+/Listener/
 /beduerfnis_klassen/
+/game/
+/gui_klassen/
+/nahrungs_klassen/
+/tamagotchi_klassen/
+/timerTask_klassen/
+/schlafen_klassen/
+/spielen_klassen/
