Package Listener Verbuggt

--- a/Tamagotchi/bin/.gitignore
+++ b/Tamagotchi/bin/.gitignore
@@ -1,9 +1,9 @@
-/Listener/
 /beduerfnis_klassen/
 /game/
 /gui_klassen/
+/listener/
 /nahrungs_klassen/
-/tamagotchi_klassen/
-/timerTask_klassen/
 /schlafen_klassen/
 /spielen_klassen/
+/tamagotchi_klassen/
+/timerTask_klassen/
