Grafik und Debug für master
Runnable Klasse AnimationT erstellt.
Darin werden die Bilder vom Tamagotchi in einem Array gespeichert aus
dem man später das akutelle Bild entnehmen kann. Die Run ändert das Bild
was - wenn die Bilder alle fertig sind - später zu einer Animation wird.

Klasse Background für einen Hintergrund fürs gesammte Spielfenster
(momentan Platzhalterbild).
Dafür musste das ButtonPanel mit setOpaque(false) transparent gemacht
werden.

Debugable Interface mit public static booleans für verschiedene
Debugmodes. In welchen Klassen diese benötigt werden muss noch
abgesprochen werden.

--- a/Tamagotchi/bin/.gitignore
+++ b/Tamagotchi/bin/.gitignore
@@ -1,9 +1,4 @@
-/beduerfnis_klassen/
-/game/
+/debug.class
+/debug/
 /gui_klassen/
-/listener/
-/nahrungs_klassen/
-/schlafen_klassen/
-/spielen_klassen/
-/tamagotchi_klassen/
-/timerTask_klassen/
+/debugInterface/
