UserInput Abfrage und "TamagotchiUsable"
Es kann nun nach belieben mit der Methode Game.getGame().getUserInput(
... ) nach einer eingabe des Users in einem Neuen Fenster gefragt
werden. Dazu wird die Klasse JOptionPane benutzt.

Desweiteren wurde in den Klassen Nahrung, Spielmoeglichkeiten und
Schalfensorte das Interface "TamagotchiUsable" implementiert, welches
für eine bessere Gruppierung sorgt. Durch die Implementierung haben nun
auch alle Subklassen die Methode "use", welche nichts anderes tut als
deren Vorgänger (Siehe Anhand der Änderung in den Dateien selber). Im
Tamagotchi kann so nun einfach die Methode "use" aufgerufen werden, um
diese TamagotchiUsables zu triggern.
Als resultat konnten 3 Komplette Listener Klassen und 4 Methode zu
jeweils einer zusammenfassen.

--- a/Tamagotchi/bin/.gitignore
+++ b/Tamagotchi/bin/.gitignore
@@ -2,3 +2,8 @@
 /runnable_klassen/
 /beduerfnis_klassen/
 /game/
+/nahrungs_klassen/
+/schlafen_klassen/
+/spielen_klassen/
+/tamagotchi_klassen/
+/listener/
