--- a/Tamagotchi/bin/.gitignore
+++ b/Tamagotchi/bin/.gitignore
@@ -1,9 +1,10 @@
-/gui_klassen/
-/runnable_klassen/
 /beduerfnis_klassen/
+/debugInterface/
 /game/
+/gui_klassen/
+/listener/
 /nahrungs_klassen/
+/runnable_klassen/
 /schlafen_klassen/
 /spielen_klassen/
 /tamagotchi_klassen/
-/listener/
