--- a/Tamagotchi/bin/.gitignore
+++ b/Tamagotchi/bin/.gitignore
@@ -1,11 +1,11 @@
+/achievement/
 /beduerfnis_klassen/
 /debugInterface/
-/erfolge/
 /game/
 /gui_klassen/
 /listener/
 /nahrungs_klassen/
-/runnable_klassen/
 /schlafen_klassen/
 /spielen_klassen/
 /tamagotchi_klassen/
+/runnable_klassen/
